--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My JavaScript Game</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <div id="startScreen">
@@ -15,6 +15,6 @@
 
     <canvas id="gameCanvas" style="display: none;"></canvas>
 
-    <script src="mainMenu.js"></script>
+    <script src="js/mainMenu.js"></script>
 </body>
 </html>
