--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
     <canvas id="gameCanvas" style="display: none;"></canvas>
 
+    <script src="js/cannon.min.js"></script>
+    <script src="js/three.min.js"></script>
     <script src="js/init.js"></script>
     
     <script src="js/mainMenu.js"></script>
