--- a/index.html
+++ b/index.html
@@ -1,25 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My JavaScript Game</title>
-    <link rel="stylesheet" href="css/styles.css">
-</head>
-<body>
-    <div id="startScreen">
-        <h1>Welcome to My Awesome Game!</h1>
-        <p>Press the button to start your adventure.</p>
+    <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Voxel Game Prototype</title>
+    <link rel="stylesheet" href="styles.css" />
+    </head>
+    <body>
+    <div id="mainMenu">
+        <h1>Voxel Game</h1>
         <button id="startButton">Start Game</button>
     </div>
 
-    <canvas id="gameCanvas" style="display: none;"></canvas>
+    <div id="gameContainer" style="display: none;"></div>
 
-    <script src="js/cannon.min.js"></script>
     <script src="js/three.min.js"></script>
-    <script src="js/init.js"></script>
-    
+    <script src="js/controls.js"></script>
     <script src="js/mainMenu.js"></script>
-    
+    <script src="js/init.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
