--- a/mergedindex.html
+++ b/mergedindex.html
@@ -14,6 +14,38 @@
 
     <div id="gameContainer" style="display: none;"></div>
     <script src="js/three.min.js"></script>
+    <!--octree-->
+    <script>
+        class octreeNode {
+            constructor(x,y,z,size,material,minsize,isleaf){
+                //xyz position relative to world origin
+                this.x=x;
+                this.y=y;
+                this.z=z;
+                //length of one side of cube this node describes
+                this.size=size;
+                //material of voxel
+                this.material=material;
+                //minimum voxel size(size of singular voxel)
+                this.minsize=minsize;
+                //children nodes
+                this.child=[];
+                //is leaf(does octree end on this node)
+                this.isleaf=true;
+            }
+
+            /**
+             * split current node into children nodes
+             * @param materials list of materials to set for each child node
+             * positions of cubes for materials list
+             * 
+             */
+            split(materials) {
+                this.isleaf=false;
+                
+            }
+        }
+    </script>
     <!--controls.js-->
     <script>
         let moveForward = false;
@@ -98,7 +130,7 @@
             });
 
         return yawObject; // attach this to the scene
-    }
+        }
 
         /**
          * Updates FPS camera movement each frame:
