--- a/mergedindex.html
+++ b/mergedindex.html
@@ -68,6 +68,7 @@
                     let commonmat=true;
                     let firstmat=this.child[0].material;
                     let mergednode=new octreeNode(this.x,this.y,this.z,this.size,this.material,this.minsize,true);
+                    return mergednode;
                 }
                 else{
                     let commonmat=true;
@@ -86,6 +87,20 @@
                     }
                     else{
                         return null;
+                    }
+                }
+            }
+            get(x,y,z){
+                if (this.isleaf){
+                    return this.material;
+                }
+                else{
+                    let index=0;
+                    if (y<=this.y-this.size/2){
+                        index+=4;
+                    }
+                    if (z<=this.z-this.size/2){
+                        
                     }
                 }
             }
