--- a/mergedindex.html
+++ b/mergedindex.html
@@ -17,46 +17,64 @@
     <!--octree-->
     <script>
         class octreeNode {
-            constructor(x,y,z,size,material,minsize,isleaf){
+            constructor(x,y,z,halfsize,material,minsize,isleaf){
                 //xyz position relative to world origin(+,+,+ point of cube)
                 this.x=x;
                 this.y=y;
                 this.z=z;
                 //length of one side of cube this node describes
-                this.size=size;
+                this.halfsize=halfsize;
                 //material of voxel
                 this.material=material;
                 //minimum voxel size(size of singular voxel)
                 this.minsize=minsize;
                 //children nodes
-                this.child=[];
+                this.children=[];
                 //is leaf(does octree end on this node)
-                this.isleaf=true;
+                this.isleaf=isleaf;
             }
 
             /**
              * split current node into children nodes
              * @param materials list of materials to set for each child node
              * positions of cubes for materials list(positive or negative xyz for quadrant)
-             * [(+,+,+),(-,+,+),(+,+,-),(-,+,-),(+,-,+),(-,-,+),(+,-,-),(-,-,-)]
+             * 0	-	-	-
+             * 1	+	-	-
+             * 2	-	-	+
+             * 3	+	-	+
+             * 4	-	+	-
+             * 5	+	+	-
+             * 6	-	+	+
+             * 7	+	+	+
              */
             split(materials) {
-                if (this.size/2<this.minsize){
+                if (this.halfsize<this.minsize){
                     return false;
                 }
                 this.isleaf=false;
-                for (let i=0;i<2;i++){
-                    for (let j=0;j<2;j++){
-                        for (let k=0;k<2;k++){
-                            let tpmnode=new octreeNode(this.x-k*this.size/2,this.y-i*this.size/2,this.z-j*this.size/2,materials[i*4+j*2+k]!=null ? materials[i*4+j*2+k] : this.material,this.minsize,true);
-                            this.child.push(tmpnode);
-                        }
-                    }
+                this.children=new Array(8);
+                let newhalf=this.halfsize/2;
+                //iterate 8 quadrants and calculate child locations
+                for (let i=0;i<8;i++){
+                    //fing sign for each axis using bit masks
+                    /**
+                     * & is bit operator, same as c++
+                     * 5&1
+                     * 101
+                     * 001
+                     * ___
+                     * 001=1
+                     */
+                    let signX=(i & 1) ? 1:-1;
+                    let signZ=(i & 2) ? 1:-1;
+                    let signY=(i & 4) ? 1:-1;
+                    let childMaterial=materials[i] || this.material;
+                    this.children[i]=new octreeNode(this.x+signX*newhalf,this.y+signY*newhalf,this.z+signZ*newhalf,newhalf,childMaterial,this.minsize,true);
                 }
             }
             /**
              * merge children nodes into current node
-             * @param forRendering if true, merges regardless of material, averaging colors, and doesn't actually apply changes to self
+             * @param forRendering if true, merges regardless of material, averaging colors, and doesn't actually apply changes to instance
              * @return if forRendering is true, returns merged node. Otherwise returns nothing.
              */
             merge(forRendering){
@@ -66,23 +84,22 @@
                 if (forRendering){
                     //TODO: implement color averaging
                     let commonmat=true;
-                    let firstmat=this.child[0].material;
+                    let firstmat=this.children[0].material;
                     let mergednode=new octreeNode(this.x,this.y,this.z,this.size,this.material,this.minsize,true);
                     return mergednode;
                 }
                 else{
                     let commonmat=true;
-                    let firstmat=this.child[0].material;
+                    let firstmat=this.children[0].material;
                     for (let i=1;i<8;i++){
-                        if (this.child[i].material!=firstmat){
+                        if (this.children[i].material!=firstmat){
                             commonmat=false;
                             break;
                         }
-                        firstmat=this.child[i].material;
                     }
                     if (commonmat){
                         this.material=firstmat;
-                        this.child=[];
+                        this.children=[];
                         this.isleaf=true;
                     }
                     else{
@@ -90,9 +107,15 @@
                     }
                 }
             }
+            /**
+             * get cube instance at position(x,y,z)
+             * @param x world x coordinate(relative to origin)
+             * @param y world y coordinate(relative to origin)
+             * @param z world z coordinate(relative to origin)
+             */
             get(x,y,z){
                 if (this.isleaf){
-                    return this.material;
+                    return this;
                 }
                 else{
                     let index=0;
@@ -100,8 +123,12 @@
                         index+=4;
                     }
                     if (z<=this.z-this.size/2){
-                        
+                        index+=2;
                     }
+                    if (x<=this.x-this.size/2){
+                        index+=1;
+                    }
+                    return this.children[index].get(x,y,z);
                 }
             }
         }
