--- a/mergedindex.html
+++ b/mergedindex.html
@@ -70,6 +70,7 @@
                     let signY=(i & 4) ? 1:-1;
                     let childMaterial=materials[i] || this.material;
                     this.children[i]=new octreeNode(this.x+signX*newhalf,this.y+signY*newhalf,this.z+signZ*newhalf,newhalf,childMaterial,this.minsize,true);
+
                 }
             }
             /**
@@ -83,29 +84,19 @@
                 }
                 if (forRendering){
                     //TODO: implement color averaging
-                    let commonmat=true;
-                    let firstmat=this.children[0].material;
                     let mergednode=new octreeNode(this.x,this.y,this.z,this.size,this.material,this.minsize,true);
                     return mergednode;
                 }
-                else{
-                    let commonmat=true;
-                    let firstmat=this.children[0].material;
-                    for (let i=1;i<8;i++){
-                        if (this.children[i].material!=firstmat){
-                            commonmat=false;
-                            break;
-                        }
-                    }
-                    if (commonmat){
-                        this.material=firstmat;
-                        this.children=[];
-                        this.isleaf=true;
-                    }
-                    else{
+                //iterate children and check if materials are same
+                let firstmat=this.children[0].material;
+                for (let i=1;i<8;i++){
+                    if (this.children[i].material!=firstmat){
                         return null;
                     }
                 }
+                this.material=firstmat;
+                this.children=null;
+                this.isleaf=true;
             }
             /**
              * get cube instance at position(x,y,z)
@@ -117,19 +108,24 @@
                 if (this.isleaf){
                     return this;
                 }
-                else{
-                    let index=0;
-                    if (y<=this.y-this.size/2){
-                        index+=4;
-                    }
-                    if (z<=this.z-this.size/2){
-                        index+=2;
-                    }
-                    if (x<=this.x-this.size/2){
-                        index+=1;
-                    }
-                    return this.children[index].get(x,y,z);
-                }
+                let index=0;
+                /**
+                 * |= bitwise or assignment
+                 * 1|=3
+                 * 001
+                 * 011
+                 * ___
+                 * 011=3
+                 * 2|=1
+                 * 010
+                 * 001
+                 * ___
+                 * 011=3
+                 */
+                if (x>this.x) index|=1;
+                if (z>this.z) index|=2;
+                if (y>this.y) index|=4;
+                return this.children[index].get(x,y,z);
             }
         }
     </script>
