--- a/index.html
+++ b/index.html
@@ -438,6 +438,7 @@
             // Renderer
             renderer = new THREE.WebGLRenderer({ antialias: true });
             renderer.setSize(window.innerWidth, window.innerHeight);
+            renderer.shadowMap.enabled = true;
             container.appendChild(renderer.domElement);
 
             // Initialize controls
@@ -448,12 +449,14 @@
             // Lighting
             const light = new THREE.DirectionalLight(0xffffff, 1);
             light.position.set(5, 10, 7.5);
+            light.castShadow = true;
             scene.add(light);
 
             // Ground
             const groundGeo = new THREE.PlaneGeometry(20, 20);
             const groundMat = new THREE.MeshStandardMaterial({ color: 0x228b22 });
             const ground = new THREE.Mesh(groundGeo, groundMat);
+            ground.receiveShadow = true;
             ground.rotation.x = -Math.PI / 2;
             scene.add(ground);
 
@@ -462,6 +465,8 @@
             const cubeMat = new THREE.MeshStandardMaterial({ color: 0xff0000 });
             cube = new THREE.Mesh(cubeGeo, cubeMat);
             cube.position.y = 0.5;
+            cube.castShadow = true;
+            cube.receiveShadow = true;
             scene.add(cube);
 
             window.addEventListener("resize", onWindowResize);
